*** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***

* SNAPSHOT June 21, 2016
  * Upstream 2016-04-13
  * Build with FFMPEG 3.0.2 supported libmp3lame.
  * [Linux] Build with qt.io's official Qt 5.3.1 expect to work with 
    Ubuntu 16.04 LTS and Debian 8 "Jessie".
  * [MOVIE_SAVER] (Maybe mostly?) Fix asynchronous both video and audio.
  * [MOVIE_SAVER] Add libmp3lame and vorbis (disable from UI) for audio codec.
  * [Qt] Not linking config and using_flags directly from libCSPgui , libCSPavio and libCSPosd .
  * [MOVIE_SAVER][EMU] Fix stop/restart recording movie when changing/ejecting CARTRIDGEs.
                       Now, don't stop when changing/eject cartridge.
    See, http://hanabi.2ch.net/test/read.cgi/i4004/1430836648/699 .
  * [MOVIE_SAVER] Re-enable (and selectable) H.264 for video codec.
  * Build with 85c331b7635ca713e819218b86d65a877b7478f3 (or later).
  
-- Jun 21, 2016 01:07:44 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT June 18, 2016
  * Upstream 2016-04-13 .
  * Build with FFMPEG 3.0.2 .
  * [MOVIE_SAVER] More safer open/close.
  * [MOVIE_SAVER] Fix deadlock when closing movie.
  * [MOVIE_SAVER] Selectable both MPEG4v1 and H.264(libx264) for video codec.
  * [MOVIE_SAVER][Qt] Temporally set video-codec to MPEG4 (not AVC).
    This is issue of discard frames with libx264 by ffmpeg's libavcodec/libavformat.
    This seems to be ffmpeg's issue, not my program.
  * Build with 629f7d70816c04b38c3ab8cc277147a6bd2c2d2a (or later).
  
-- Jun 18, 2016 03:32:06 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT June 11, 2016
  * Upstream 2016-04-13 .
  * Use osdn.jp to distibute binaries.
    https://osdn.jp/projects/csp-qt .
  * [MOVIE_SAVER] Use ffmpeg internal aac codec, because faac or fdk_aac are not *Free* .
  * [VM/MOVIE_SAVER] Fix stopping when changing cartridge, now refer to upstream (split movies).
  * [Qt/Win32] Fix not work with WindowsXP, using homebrew version of ffmpeg-2.8.7.