@@ -1,6 +1,6 @@
 ** Qt porting and FM-7/77/AV/AV40/EX for Common Source Code Project **
 
-                                                         June 21, 2016
+                                                         June 29, 2016
                             K.Ohta  (whatisthis.sowhat _at_ gmail.com)
 
 1.About
@@ -9,7 +9,7 @@ This package is Qt5 porting of Common Source Code Project (CSP)
 and built with Qt5, for Windows, built with MinGW(32bit).
 
 Source Code:
-   https://github.com/Artanejp/common_source_project-fm7/releases/tag/SNAPSHOT_20160621
+   https://github.com/Artanejp/common_source_project-fm7/releases/tag/SNAPSHOT_20160629
    
 Additional INFO:
    Binaries will be available, distibute from osdn.jp.
@@ -82,6 +82,15 @@ Upstream (Takeda Toshiya San's original code)
 http://homepage3.nifty.com/takeda-toshiya/
 
 Changes:
+
+* SNAPSHOT June 29, 2016
+  * Upstream 2016-04-13
+  * Build with FFMPEG 3.0.2 supported libmp3lame.
+  * [MOVIE_SAVER/Win32] Fix wrong value of left frames for audio when stopping to record.
+  * [OSD/Qt] Fix wrong FPS with not drawing.
+  * Build with 3752c12b4b08f9910f3e3b6ad6f7dfbd76342cbb (or later).
+  
+-- Jun 29, 2016 13:05:15 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT June 21, 2016
   * Upstream 2016-04-13
