@@ -9,13 +9,13 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-06-21<BR>
+Qt Port and FM7 series 2016-06-29<BR>
 libCSPavio 2.0.0<BR>
 libCSPgui 2.0.0<BR>
-libCSPosd 2.0.0<BR>
+libCSPosd 2.0.1<BR>
 libCSPemu_utils 2.0.0<BR>
 FFMPEG 3.0.2 + liblame 3.99 + libx264-148<BR>
-Build Version: 85c331b7635ca713e819218b86d65a877b7478f3<BR>
+Build Version: 3752c12b4b08f9910f3e3b6ad6f7dfbd76342cbb<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -67,5 +67,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Tue 21 June, 2016 01:22:56<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed 29 June, 2016 13:10:35<!-- hhmts end -->
 </body> </html>
