@@ -1,5 +1,14 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT June 29, 2016
+  * Upstream 2016-04-13
+  * Build with FFMPEG 3.0.2 supported libmp3lame.
+  * [MOVIE_SAVER/Win32] Fix wrong value of left frames for audio when stopping to record.
+  * [OSD/Qt] Fix wrong FPS with not drawing.
+  * Build with 3752c12b4b08f9910f3e3b6ad6f7dfbd76342cbb (or later).
+  
+-- Jun 29, 2016 13:05:15 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT June 21, 2016
   * Upstream 2016-04-13
   * Build with FFMPEG 3.0.2 supported libmp3lame.
